<resources>
    <string name="app_name">CoronaStatsCL</string>

    <string name="btn_atras">Volver</string>
    <string name="btn_mapa">Mapa</string>
    <string name="btn_grafico">Gráfico</string>
    <string name="btn_map_atras">Volver</string>
    <string name="btn_graf_atras">Volver</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnCambiarGrafico">Cambiar Gráfico</string>
    <string name="tViewTitulo">Resumen Total por Regiones</string>
    <string name="txt_fecha">Fecha: </string>
    <string name="btnIngresar">Ingresar</string>
    <string name="tViewInicio">CoronaStatsCL</string>
    <string name="tvRegion">Region</string>
    <string name="tvConfirmados">Confirmados</string>
    <string name="tvFallecidos">Fallecidos</string>
    <string name="tvRecuperados">Recuperados</string>
    <string name="tvActivos">Activos</string>
    <string name="spinnerRegiones">Seleccione una región</string>
    <string name="tViewSelector">Seleccione una región</string>
</resources>
