<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3">


    <TextView
        android:id="@+id/tvFallecidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvFallecidos"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toEndOf="@+id/tvConfirmados" />

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_fecha"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_grafico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="cambiar_pantalla"
        android:text="@string/btn_grafico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_mapa" />

    <Button
        android:id="@+id/btn_mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="cambiar_pantalla"
        android:text="@string/btn_mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="cambiar_pantalla"
        android:text="@string/btn_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_grafico" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerJSON"
        android:textColor="#fff"
        android:layout_width="384dp"
        android:layout_height="281dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/fondorecycler"
        android:textAlignment="inherit"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/btn_grafico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tViewTitulo"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="68dp"
        android:text="@string/tViewTitulo"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="#fff"
        android:text="@string/tvRegion"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvConfirmados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvConfirmados"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toEndOf="@+id/tvRegion" />

    <TextView
        android:id="@+id/tvRecuperados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvRecuperados"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toEndOf="@+id/tvFallecidos" />

    <TextView
        android:id="@+id/tvActivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvActivos"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/recyclerJSON"
        app:layout_constraintStart_toEndOf="@+id/tvRecuperados" />

</androidx.constraintlayout.widget.ConstraintLayout>