<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".GraficoActivity2">

    <TextView
        android:id="@+id/tViewSelector2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tViewSelector"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/graficaBarras"
        android:layout_width="478dp"
        android:layout_height="420dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiarGrafico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRegiones"></com.github.mikephil.charting.charts.BarChart>

    <Button
        android:id="@+id/btnCambiarGrafico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="cambiar_graf"
        android:text="@string/btnCambiarGrafico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_graf_atras"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_graf_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bordes_redondos"
        android:onClick="retorno_graf"
        android:text="@string/btn_graf_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCambiarGrafico" />

    <Spinner
        android:id="@+id/spinnerRegiones"
        android:layout_width="389dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>